--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,3 +17,52 @@ texture_format/etc2=false
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+patch_list=PoolStringArray(  )
+
+[preset.1.options]
+
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
+
+[preset.2]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+patch_list=PoolStringArray(  )
+
+[preset.2.options]
+
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=true
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
